fixed twitter card img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ h2 {
 
 .tweeter-card-img {
     
-    width: 75px;
+    width: 100px;
     max-width: 125px;
     height: auto;
     border-radius: 10px;
